--- a/paper/01_header_stat_ha.tex
+++ b/paper/01_header_stat_ha.tex
@@ -24,7 +24,7 @@
 \pagenumbering{arabic}% arabische Seitenzahlen
 \setkomafont{sectioning}{\bfseries}% Serifenschrift für Überschriften
 %\usepackage[small]{titlesec}%% verkleinert die Überschriften etwas
-\usepackage[singlelinecheck=0]{caption}% linksbündige Abbildungsüberschriften
+%\usepackage[singlelinecheck=0]{caption}% linksbündige Abbildungsüberschriften
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
