--- a/paper/02_titelseite_stat_ha.tex
+++ b/paper/02_titelseite_stat_ha.tex
@@ -16,7 +16,12 @@ Prüfer: Dr. Sara Bleniger\\% Name eintragen
 
 \vspace*{\fill}%
 \begin{center}%
-    \textbf{\Large{Statistische Geheimhaltung: Cell Key Methode}}%
+    \textbf{\Huge{Statistische Geheimhaltung:}}%
+\end{center}%
+\begin{center}%
+    {\linespread{2.5}
+    \textbf{\Huge{Cell Key Methode}}%
+    }
 \end{center}%
 \vfill%
 
