--- a/paper/01_header_stat_ha.tex
+++ b/paper/01_header_stat_ha.tex
@@ -26,6 +26,7 @@
 %\usepackage[small]{titlesec}%% verkleinert die Überschriften etwas
 %\usepackage[singlelinecheck=0]{caption}% linksbündige Abbildungsüberschriften
 
+\setlength{\parindent}{0em} % Keine Einrückung nach neuem Absatz
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
