--- a/presentation/ckm_slides.tex
+++ b/presentation/ckm_slides.tex
@@ -74,6 +74,7 @@
 %\setbeamertemplate{footline}[page number] % To replace the footer line in all slides with a simple slide count uncomment this line
 
 %\setbeamertemplate{navigation symbols}{} % To remove the navigation symbols from the bottom of all slides uncomment this line
+\setbeamertemplate{caption}[numbered] % Figure/caption numbering
 }
 
 \usepackage{graphicx} % Allows including images
