--- a/paper/03_literatur_stat_ha.tex
+++ b/paper/03_literatur_stat_ha.tex
@@ -10,6 +10,10 @@
 \bibitem[Enderle, 2019]{Enderle} 
 Enderle, Tobias und Meike Vollmar: Geheimhaltung in der Hochschulstatistik. \emph{WISTA} | 6, Statistisches Bundesamt (Destatis), Wiesbaden 2019.
 
+\bibitem[Giessing, 2016]{Giessing} 
+Giessing, Sarah: Computational Issues in the Design of Transition Probabilities and Disclosure Risk Estimation for Additive Noise.
+\emph{LNCS}, vol. 9867, Springer International Publishing, 2016.
+
 \bibitem[Höhne, 2019]{Höhne} 
 Höhne, Jörg und Julia Höninger: Die Cell-Key-Methode – ein Geheimhaltungsverfahren. \emph{Statistische Monatshefte Niedersachsen} 1, 2019.
 
